--- a/lib/src/dashboard_component.css
+++ b/lib/src/dashboard_component.css
@@ -83,3 +83,37 @@ h4 {
   color: #1E90FF;
   font-family: 'Courier New', Courier, monospace;
 }
+
+.top-title {
+  text-align: center;
+  margin: 2px;
+}
+
+.top-hero {
+  padding: 2px;
+}
+
+.top-hero-card {
+  width: 100%;
+  height: 140px;
+  background-color: grey;
+  color: white;
+  text-align: center;
+}
+
+.top-hero-card:hover {
+  cursor: pointer;
+  background-color: black;
+}
+
+.control-panel {
+  text-align: center;
+  margin-top: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.control-panel button {
+  margin-left: 2px;
+  margin-right: 2px;
+}
