--- a/lib/src/dashboard_component.css
+++ b/lib/src/dashboard_component.css
@@ -108,7 +108,7 @@ h4 {
 
 .control-panel {
   text-align: center;
-  margin-top: 2px;
+  margin-top: 1rem;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -116,4 +116,9 @@ h4 {
 .control-panel button {
   margin-left: 2px;
   margin-right: 2px;
+}
+
+.display-panel {
+  text-align: center;
+  padding: 1rem;
 }
