--- a/lib/src/dashboard_component.css
+++ b/lib/src/dashboard_component.css
@@ -1,81 +1,3 @@
-/* [class*='col-'] {
-  float: left;
-  padding-right: 20px;
-  padding-bottom: 20px;
-}
-
-[class*='col-']:last-of-type {
-  padding-right: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-*,
-*:after,
-*:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-h3 {
-  text-align: center;
-  margin-bottom: 0;
-}
-
-h4 {
-  position: relative;
-}
-
-.grid {
-  margin: 0;
-}
-
-.col-1-4 {
-  width: 25%;
-}
-
-.module {
-  padding: 20px;
-  text-align: center;
-  color: #eee;
-  max-height: 120px;
-  min-width: 120px;
-  background-color: #607D8B;
-  border-radius: 2px;
-}
-
-.module:hover {
-  background-color: #EEE;
-  cursor: pointer;
-  color: #607d8b;
-}
-
-.grid-pad {
-  padding: 10px 0;
-}
-
-.grid-pad>[class*='col-']:last-of-type {
-  padding-right: 20px;
-}
-
-@media (max-width: 600px) {
-  .module {
-    font-size: 10px;
-    max-height: 75px;
-  }
-}
-
-@media (max-width: 1024px) {
-  .grid {
-    margin: 0;
-  }
-  .module {
-    min-width: 60px;
-  }
-} */
 
 .dashboard-title {
   text-align: center;
@@ -96,6 +18,7 @@ h4 {
 .top-hero-card {
   width: 100%;
   height: 140px;
+  padding-top: 55px;
   background-color: grey;
   color: white;
   text-align: center;
@@ -104,6 +27,7 @@ h4 {
 .top-hero-card:hover {
   cursor: pointer;
   background-color: black;
+  border-radius: 10px;
 }
 
 .control-panel {
@@ -116,9 +40,4 @@ h4 {
 .control-panel button {
   margin-left: 2px;
   margin-right: 2px;
-}
-
-.display-panel {
-  text-align: center;
-  padding: 1rem;
 }
