--- a/lib/src/hero_tour/hero_tour_list/hero_tour_list_component.css
+++ b/lib/src/hero_tour/hero_tour_list/hero_tour_list_component.css
@@ -52,10 +52,120 @@
 }
 
 button.delete {
-    float:right;
+    float: right;
     margin-top: 2px;
     margin-right: .8em;
     background-color: gray !important;
-    color:white;
-  }
-  
+    color: white;
+}
+
+
+
+.ability-head {
+    height: 45px;
+    padding-top: 12px;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.fire {
+    background-color: red;
+    color: white;
+}
+
+.fire-hero {
+    background-color: #F08080;
+    color: black;
+}
+
+.water {
+    background-color: #1E90FF;
+    color: white;
+}
+
+.water-hero {
+    background-color: #ADD8E6;
+    color: black;
+}
+
+.ground {
+    background-color: #808000;
+    color: black;
+}
+
+.ground-hero {
+    background-color: #DAA520;
+    color: black;
+}
+
+.wind {
+    background-color: #00FF00;
+    color: black;
+}
+
+.wind-hero {
+    background-color: #ADFF2F;
+    color: black;
+}
+
+.thunder {
+    background-color: #9932CC;
+    color: white;
+}
+
+.thunder-hero {
+    background-color: #6A5ACD;
+    color: white;
+}
+
+.hero-tag {
+    max-width: 150px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-align: left;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.hero-tag:hover, .mixed-hero:hover {
+    -ms-transform: scale(1, 1.2); /* IE 9 */
+    -webkit-transform: scale(1, 1.2); /* Safari */
+    transform: scale(1, 1.2);
+}
+
+.hero-tag span {
+    margin-right: 2px;
+    margin-left: 2px;
+}
+
+.mixed-hero-tag i {
+    margin-top: 25px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.mixed-hero-tag i:hover {
+    color: red;
+}
+
+.mixed-hero {
+    padding: 5px;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    height: 50px;
+    width: 300px;
+    margin: 1rem;
+    border: 1px solid grey;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.mixed-hero span {
+    margin: 2px;
+    font-size: bold;
+}
+
+.mixed-hero:hover {
+    background-color: #1E90FF;
+}
