--- a/lib/src/hero_tour/hero_edit/hero_edit_component.css
+++ b/lib/src/hero_tour/hero_edit/hero_edit_component.css
@@ -3,6 +3,7 @@
     width: 500px;
     height: 300px;
     text-align: left;
+    margin-top: 2rem;
 }
 
 .edit-form {
@@ -26,4 +27,24 @@
 
 .form-btn {
     text-align: center;
+}
+
+#back-btn {
+    margin-top: 1rem;
+    width: 100px;
+}
+
+#name-error {
+    display: none;
+    color: red;
+}
+
+#type-error {
+    display: none;
+    color: red;
+}
+
+#ability-error {
+    display: none;
+    color: red;
 }
