--- a/lib/src/hero_tour/hero_tour_list/hero_tour_list_component.css
+++ b/lib/src/hero_tour/hero_tour_list/hero_tour_list_component.css
@@ -1,71 +1,17 @@
-.selected {
-    background-color: #CFD8DC !important;
-    color: white;
-}
-
-.heroes {
-    margin: 0 0 2em 0;
-    list-style-type: none;
-    padding: 0;
-    width: 15em;
-}
-
-.heroes li {
-    cursor: pointer;
-    position: relative;
-    left: 0;
-    background-color: #EEE;
-    margin: .5em;
-    padding: .3em 0;
-    height: 1.6em;
-    border-radius: 4px;
-}
-
-.heroes li.selected:hover {
-    color: white;
-}
-
-.heroes li:hover {
-    color: #607D8B;
-    background-color: #EEE;
-    left: .1em;
-}
-
-.heroes .text {
-    position: relative;
-    top: -3px;
-}
-
-.heroes .badge {
-    display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color: #607D8B;
-    line-height: 1em;
-    position: relative;
-    left: -1px;
-    top: -4px;
-    height: 1.8em;
-    margin-right: .8em;
-    border-radius: 4px 0 0 4px;
-}
-
-button.delete {
-    float: right;
-    margin-top: 2px;
-    margin-right: .8em;
-    background-color: gray !important;
-    color: white;
-}
-
-
 
 .ability-head {
     height: 45px;
     padding-top: 12px;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
+}
+
+.add-btn {
+    text-align: center;
+}
+
+.add-btn button {
+    margin-top: 5px;
 }
 
 .fire {
@@ -139,6 +85,10 @@ button.delete {
     margin-left: 2px;
 }
 
+.mixed-hero-tag {
+    width: 100%;
+}
+
 .mixed-hero-tag i {
     margin-top: 25px;
     font-size: 20px;
@@ -168,4 +118,20 @@ button.delete {
 
 .mixed-hero:hover {
     background-color: #1E90FF;
+}
+
+.search-div {
+    padding: 2px;
+    margin-bottom: 1rem;
+}
+
+.btn-div {
+    padding: 2px;
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.btn-div button {
+    margin-left: 5px;
+    margin-right: 5px;
 }
